Kláraði Auglýsingu í verkefni3

--- a/verkefni3/css/verkefni2.css
+++ b/verkefni3/css/verkefni2.css
@@ -145,7 +145,7 @@ header h1 {
 }
 
 .midja a{
-  color:blue;
+  color:lightgreen;
 }
 /* ========================================
   Efnisyfirlit
@@ -265,12 +265,12 @@ img{
   height:600px;
   width: 300px;
   background-image:url("../myndir/taekniskoli.jpg");
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   text-decoration: none;
   color:black;
   animation-name:transition;
-  animation-duration: 40s;
-  animation-delay: 3s;
+  animation-duration: 100s;
+  animation-delay: 10s;
   animation-iteration-count: infinite;
 }
 .adbox{
@@ -293,7 +293,7 @@ img{
   height:1000px;
   width:1000px;
   animation-name: move;
-  animation-duration: 20s;
+  animation-duration: 25s;
   animation-delay: 3s;
   animation-iteration-count: infinite;
   left:30px;
@@ -302,42 +302,53 @@ img{
 }
 .adtexti{
 animation-name:transp;
-animation-duration:20s;
+animation-duration:25s;
 animation-delay: 3s;
 animation-iteration-count: infinite;
 position: absolute;
-left:50px;
-top:280px;
+left:15px;
+top:200px;
 color: black;
 z-index: 9999;
 opacity:0;
+color:white;
 }
 .admynd{
   animation-name: transp;
   animation-delay: 3s;
-  animation-duration: 20s;
+  animation-duration: 25s;
   animation-iteration-count: infinite;
   position:absolute;
   opacity: 0;
 }
+.fakelink{
+  text-decoration: underline;
+  color: lightgreen;
+}
+
+
+/*===============================
+          Animation
+================================*/
 @keyframes transition{
   0% {background-image: url("../myndir/taekniskoli.jpg");}
-  
+  50% {background-image: url("../myndir/taekniskoli2.jpg");}
+  75% {background-image: url("../myndir/taekniskoli2.jpg");}
   100% {background-image: url("../myndir/taekniskoli.jpg");}
 }
 @keyframes transp{
   0% {opacity: 0;}
   50% {opacity: 0;}
-  75% {opacity:1;}
-  80% {opacity:0;}
+  75% {opacity: 1;}
+  80% {opacity: 0;}
   100% {opacity: 0;}
 }
 @keyframes move {
-  0% {top:540px;}
-  25% {top:540px;}
+  0% {top: 540px;}
+  25% {top: 540px;}
   50% {top: 90px;}
   75% {top: 90px;}
-  100% {top:540px;}
+  100% {top: 540px;}
 }
 
 /*  ========================================
@@ -349,7 +360,7 @@ opacity:0;
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
-  width:324px;
+  width: 324px;
 }
 }
 
@@ -459,10 +470,4 @@ opacity:0;
   .topnav{
   	height: 45px;
   }
-}
-
-@media screen and (min-width: 100em){
-	body{
-		max-width: 95em;
-	}
 }
