--- a/verkefni3/css/verkefni2.css
+++ b/verkefni3/css/verkefni2.css
@@ -33,7 +33,7 @@ footer{
   display: flex;
   flex-flow: row;
   position: relative;
-  z-index: 1;
+  z-index: 5;
 }
 .smediabar a{
   margin-left:10px;
@@ -283,7 +283,6 @@ img{
   width: 280px;
   bottom:25px;
   left:-4.5px;
-  z-index: 3;
 }
 .anim{
   overflow: hidden;
@@ -297,8 +296,6 @@ img{
   animation-delay: 3s;
   animation-iteration-count: infinite;
   left:30px;
-  z-index: 2;
-
 }
 .adtexti{
 animation-name:transp;
@@ -325,8 +322,46 @@ color:white;
   text-decoration: underline;
   color: lightgreen;
 }
+/*=================================
+            Modal
+===================================*/
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
 
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
 /*===============================
           Animation
 ================================*/
