--- a/verkefni3/css/verkefni2.css
+++ b/verkefni3/css/verkefni2.css
@@ -325,42 +325,58 @@ color:white;
 /*=================================
             Modal
 ===================================*/
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+#popup{
+  background: green;
+  border-radius: 5px;
+  color:white;
 }
-
-/* Modal Content */
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+#popup:hover{
+  background:linear-gradient(green,lightgreen);
 }
-
-/* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left:0;
+  top:0;
+  right:0;
+  width:100%;
+  height:100%;
+  overflow: auto;
+  background:rgb(0,0,0);
+  background: rgba(0,0,0,0.4);
 }
-
+.popupcontent{
+  color:black;
+  background-color: white;
+  margin:auto;
+  border:1px solid black;
+  width:50%;
+  padding:20px;
+  position: absolute;
+  left:400px;
+  top:300px;
+  height:400px;
+  z-index: 1;
+}
+.popupcontent p{
+  position:absolute;
+  left:46%;
+  bottom:46%;
+}
+.close{
+  color: grey;
+  font-size: 28px;
+  font-weight: bold;
+  position:absolute;
+  right:0;
+  top:0;
+}
 .close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+.close:focus{
+  color:black;
+  text-decoration:none;
+  cursor:pointer;
 }
 /*===============================
           Animation
