--- a/Exercises-sass/Ch4/scss/allstyles.scss
+++ b/Exercises-sass/Ch4/scss/allstyles.scss
@@ -1,7 +1,9 @@
 @import 'mixin_styles' ,
         'nested_styles',
         'ops_styles',
-        'var_styles';
+        'var_styles',
+        'normalize'
+        ;
 
 
 //
