--- a/Exercises-sass/Ch4/scss/allstyles.scss
+++ b/Exercises-sass/Ch4/scss/allstyles.scss
@@ -1,4 +1,5 @@
-@import 'mixin_styles' ,
+@import 'normalize' ,
+		'mixin_styles' ,
         'nested_styles',
         'ops_styles',
         'var_styles';
