--- a/Exercises-sass/Ch4/scss/nested_styles.scss
+++ b/Exercises-sass/Ch4/scss/nested_styles.scss
@@ -4,3 +4,20 @@
  */
 
 
+header{
+	color:white;
+	background-color:black;
+	border: inset 5px #AAA;
+	h1{
+		text-align:center;
+	}
+	h2{
+		margin-left:15%;
+	}
+	h3{
+		margin-left:15%;
+	}
+	h4{
+		margin-left:15%;
+	}
+}
