--- a/verkefni5/scss/socialmedia.scss
+++ b/verkefni5/scss/socialmedia.scss
@@ -54,10 +54,10 @@ $pinterestred: #cb2027;
 
 @font-face{
   font-family: icomoon;
-  src: url(Font/icomoon.svg);
-  src: url(Font/icomoon.eot);
-  src: url(Font/icomoon.ttf);
-  src: url(Font/icomoon.woff);
+  src: url(../Font/icomoon.svg);
+  src: url(../Font/icomoon.eot);
+  src: url(../Font/icomoon.ttf);
+  src: url(../Font/icomoon.woff);
 }
 .icon-facebook:before {
   font-family: icomoon;
