--- a/verkefni5/scss/table.scss
+++ b/verkefni5/scss/table.scss
@@ -22,3 +22,19 @@ th,td{
 thead{
 	@include gradient(true);
 }
+tbody{
+	tr:nth-child(odd){
+		@include gradient(true);
+		color: black;
+		border-bottom: 1px solid black;
+		border-right: 1px solid black;
+	}
+
+	tr:nth-child(2n+0){
+		border-bottom: 1px solid lightgrey;
+		border-right: 1px solid lightgrey;
+	}
+}
+@media screen and (max-width: 600px;){
+	
+}
